--- a/src/components/workplace-header/workplace-header.module.css
+++ b/src/components/workplace-header/workplace-header.module.css
@@ -15,7 +15,7 @@
   margin: 0;
   padding: 5px 10px;
   font-size: 18px;
-  min-width: 300px;
+  min-width: auto;
   width: 100%;
   box-sizing: border-box;
   border: 0;
