--- a/src/components/block/components/column-form/column-form.module.css
+++ b/src/components/block/components/column-form/column-form.module.css
@@ -19,7 +19,7 @@
   padding: 5px 10px;
   font-weight: 600;
   font-size: 14px;
-  min-width: 300px;
+  min-width: auto;
   max-width: 100%;
   min-height: 30px;
   border: 0;
