--- a/src/styles/modal/modal.css
+++ b/src/styles/modal/modal.css
@@ -1,5 +1,6 @@
 .modal {
   --header-bg-color: #ececf1;
   --background-overlay: rgb(0 0 0 / 60%);
-  font-family: 'Inter','Helvetica Neue', Arial, sans-serif;
+
+  font-family: Inter, "Helvetica Neue", Arial, sans-serif;
 }
