--- a/src/components/buttons/buttons.module.css
+++ b/src/components/buttons/buttons.module.css
@@ -7,6 +7,6 @@
   composes: common;
   justify-content: end;
   align-items: center;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
 }
