--- a/src/components/container/container.module.css
+++ b/src/components/container/container.module.css
@@ -1,8 +1,8 @@
 .container {
   display: flex;
   flex-direction: row;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   max-width: 100vw;
   max-height: calc(100vh - 42px);
   height: 100%;
