--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 5px 0;
-  background-color: aliceblue;
+  background-color: var(--header-bg-color);
   width: 100%;
   max-height: 42px;
 }
