--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -9,9 +9,9 @@
   padding: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-  min-width: 160px;
+  min-width: 130px;
   cursor: pointer;
   opacity: 0.75;
   transition: opacity 0.5s ease;
