--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -7,63 +7,10 @@
   composes: common;
   margin: 0;
   padding: 5px 5px 0 0;
-  background-color: #f6f6f6;
-}
-
-.title {
-  composes: common;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  border: 1px solid #ccc;
-  margin: 0 0 0 5px;
-  padding: 0;
-  font-weight: 500;
-  border-radius: 4px;
-}
-
-.container {
-  composes: common;
-  border: 1px solid #ccc;
-  margin: 5px 0 0 5px;
-  padding: 0;
-  min-height: 200px;
-  border-radius: 4px;
+  background-color: var(--sidebar-bg-color);
+  border-right: 1px solid #ccc;
 }
 
 .sidebar_open {
   min-width: 250px;
-}
-
-.sidebar_header {
-  display: flex;
-  flex-direction: row;
-  justify-content: end;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-
-.item {
-  composes: common;
-  justify-content: start;
-  align-items: start;
-  border: 1px solid #ccc;
-  margin: 5px;
-  padding: 5px;
-  border-radius: 4px;
-}
-
-.buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: start;
-  align-items: center;
-  padding: 0;
-  margin: 0 0 0 5px;
-  width: 100%;
-}
-
-.active {
-  background-color: antiquewhite;
 }
