--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -7,6 +7,7 @@
   margin: 0;
   padding: 5px 0;
   background-color: var(--header-bg-color);
+  border-bottom: 1px solid #ccc;
   width: 100%;
   max-height: 42px;
 }
