--- a/src/components/sidebar/components/list/list.module.css
+++ b/src/components/sidebar/components/list/list.module.css
@@ -7,8 +7,10 @@
   composes: common;
   border: 1px solid #ccc;
   margin: 5px 0 0 5px;
+  margin-bottom: 5px;
   padding: 0;
-  min-height: 200px;
+  padding-bottom: 5px;
+  height: 100%;
   border-radius: 8px;
 }
 
