--- a/src/components/sidebar/components/list/list.module.css
+++ b/src/components/sidebar/components/list/list.module.css
@@ -5,7 +5,7 @@
 
 .container {
   composes: common;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   margin: 5px 0 0 5px;
   margin-bottom: 5px;
   padding: 0;
@@ -18,7 +18,7 @@
   composes: common;
   justify-content: start;
   align-items: start;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   margin: 5px;
   margin-bottom: 0;
   padding: 5px;
@@ -31,6 +31,6 @@
 }
 
 .active {
-  background-color: antiquewhite;
-  color: #000;
+  background-color: var(--item-active);
+  color: var(--color);
 }
