--- a/src/layouts/signin-layout/components/footer/footer.module.css
+++ b/src/layouts/signin-layout/components/footer/footer.module.css
@@ -1,21 +1,22 @@
-.container {
+.common {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 88px);
 }
 
-.title {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-size: 46px;
+.footer {
+  composes: common;
+  list-style: none;
   margin: 0;
-  margin-bottom: 30px;
   padding: 0;
+}
+
+.item {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 5px;
+  font-size: 14px;
 }
 
 .link {
@@ -25,14 +26,9 @@
   transition: opacity 0.5s ease;
   margin: 0;
   padding: 0;
+  padding-left: 5px;
 }
 
 .link:hover {
   opacity: 1;
-}
-
-.span {
-  font-size: 22px;
-  padding: 0;
-  margin-top: 20px;
 }
