--- a/src/styles/root/root.css
+++ b/src/styles/root/root.css
@@ -1,16 +1,20 @@
 html {
+  --background-color: #fff;
   --header-bg-color: #f0f8ff;
   --sidebar-bg-color: #f6f6f6;
   --border-color: #ccc;
   --color: #000;
+  --error-color: indianred;
   --item-active: #b8b8b8;
 }
 
 html[data-theme="dark"] {
+  --background-color: #202124;
   --header-bg-color: #202124;
   --sidebar-bg-color: #1b1b1e;
   --border-color: #2e2e2e;
   --color: #626265;
+  --error-color: indianred;
   --item-active: #2d2e31;
 }
 
@@ -21,7 +25,6 @@ html[data-theme="dark"] {
   --width-lg: 1024px;
   --width-xl: 1280px;
   --width-2xl: 1536px;
-  --background-color: #fff;
   --background-overlay: rgb(0 0 0 / 60%);
 
   height: 100vh;
