--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -8,7 +8,7 @@
   margin: 0;
   padding: 5px 5px 0 0;
   background-color: var(--sidebar-bg-color);
-  border-right: 1px solid #ccc;
+  border-right: 1px solid var(--border-color);
 }
 
 .sidebar_open {
