--- a/src/components/container/container.module.css
+++ b/src/components/container/container.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   max-width: 100vw;
-  max-height: calc(100vh - 41px);
+  max-height: calc(100vh - 42px);
   height: 100%;
   width: 100%;
+  background-color: var(--sidebar-bg-color);
 }
