--- a/src/components/workplace/workplace.module.css
+++ b/src/components/workplace/workplace.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin: 5px;
   padding: 5px 0;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   border-radius: 12px;
   width: 100%;
   overflow: hidden;
