--- a/src/components/workplace-header/workplace-header.module.css
+++ b/src/components/workplace-header/workplace-header.module.css
@@ -20,8 +20,10 @@
   box-sizing: border-box;
   border: 0;
   border-radius: 4px;
+  background-color: var(--sidebar-bg-color);
+  color: var(--color);
 }
 
 .title:hover {
-  background-color: #e1e1e1;
+  background-color: var(--title-color-hover);
 }
