--- a/src/components/workplace-tools/workplace-tools.module.css
+++ b/src/components/workplace-tools/workplace-tools.module.css
@@ -7,6 +7,6 @@
   composes: common;
   margin: 10px;
   padding: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   border-radius: 8px;
 }
