--- a/src/components/block/components/item/item.module.css
+++ b/src/components/block/components/item/item.module.css
@@ -7,7 +7,7 @@
   composes: common;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   border-radius: 4px;
   margin: 1px;
   padding: 5px;
@@ -17,7 +17,7 @@
 }
 
 .item:hover {
-  background-color: #f6f6f6;
+  background-color: var(--title-color-hover);
   opacity: 1;
 }
 
