--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -1,20 +1,35 @@
 .common {
   display: flex;
   flex-direction: row;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.inside {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .button {
   composes: common;
   margin: 0;
   padding: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   border-radius: 4px;
-  justify-content: start;
+  justify-content: space-around;
   align-items: center;
-  min-width: 130px;
+  min-width: 135px;
   cursor: pointer;
   opacity: 0.75;
   transition: opacity 0.5s ease;
+  box-sizing: border-box;
+}
+
+.title {
+  composes: inside;
+  width: auto;
 }
 
 .button:hover {
@@ -23,12 +38,9 @@
 }
 
 .box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  composes: inside;
   min-width: 18px;
   cursor: pointer;
-  margin: 0 5px 0 0;
+  margin: 0;
   padding: 0;
 }
