--- a/src/components/icon-button/icon-button.module.css
+++ b/src/components/icon-button/icon-button.module.css
@@ -7,7 +7,7 @@
   cursor: pointer;
   margin: 0 0 0 5px;
   padding: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   border-radius: 4px;
   opacity: 0.75;
   transition: opacity 0.5s ease;
@@ -20,5 +20,4 @@
 
 .disabled {
   cursor: default;
-  /* background-color: yellow; */
 }
