--- a/src/components/sidebar/components/header/header.module.css
+++ b/src/components/sidebar/components/header/header.module.css
@@ -1,18 +1,19 @@
-.sidebar_header {
+.common {
   display: flex;
   flex-direction: row;
-  justify-content: end;
-  margin: 0;
   padding: 0;
   width: 100%;
 }
 
+.sidebar_header {
+  composes: common;
+  justify-content: end;
+  margin: 0;
+}
+
 .buttons {
-  display: flex;
-  flex-direction: row;
+  composes: common;
   justify-content: start;
   align-items: center;
-  padding: 0;
   margin: 0 0 0 5px;
-  width: 100%;
 }
