--- a/src/components/sidebar/components/list/list.module.css
+++ b/src/components/sidebar/components/list/list.module.css
@@ -6,10 +6,8 @@
 .container {
   composes: common;
   border: 1px solid var(--border-color);
-  margin: 5px 0 0 5px;
-  margin-bottom: 5px;
-  padding: 0;
-  padding-bottom: 5px;
+  margin: 5px 0 5px 5px;
+  padding: 0 0 5px;
   height: 100%;
   border-radius: 8px;
 }
@@ -19,8 +17,7 @@
   justify-content: start;
   align-items: start;
   border: 1px solid var(--border-color);
-  margin: 5px;
-  margin-bottom: 0;
+  margin: 5px 5px 0;
   padding: 5px;
   border-radius: 4px;
   color: var(--color);
