--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -14,8 +14,7 @@
 
 .item {
   margin: 0;
-  padding: 0;
-  padding-bottom: 5px;
+  padding: 0 0 5px;
   font-size: 14px;
 }
 
@@ -25,8 +24,7 @@
   opacity: 0.75;
   transition: opacity 0.5s ease;
   margin: 0;
-  padding: 0;
-  padding-left: 5px;
+  padding: 0 0 0 5px;
 }
 
 .link:hover {
