--- a/src/components/workplace/workplace.module.css
+++ b/src/components/workplace/workplace.module.css
@@ -15,6 +15,7 @@
   padding: 5px 0;
   width: 6px;
   height: 6px;
+  border-radius: 3px;
 }
 
 .workplace::-webkit-scrollbar-thumb {
@@ -25,4 +26,5 @@
 .workplace::-webkit-scrollbar-track {
   background-color: #fbfbfb;
   margin: 5px 0;
+  border-radius: 3px;
 }
