--- a/src/layouts/signin-layout/signin-layout.module.css
+++ b/src/layouts/signin-layout/signin-layout.module.css
@@ -7,7 +7,6 @@
 
 .layout {
   composes: common;
-  justify-content: self-start;
   width: 100vw;
   height: 100vh;
 }
@@ -36,34 +35,15 @@
 
 .fields {
   width: 100%;
-  margin: 0;
-  margin-bottom: 10px;
+  margin: 0 0 10px;
   padding: 0;
   box-sizing: border-box;
 }
+
 
 .button {
   min-height: 40px;
   width: 100%;
   border-radius: 6px;
-  border: 0;
-  cursor: pointer;
-  opacity: 0.75;
-  transition: opacity 0.5s ease;
-  margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-weight: 500;
-  font-size: 16px;
-}
-
-.button:hover {
-  opacity: 1;
-}
-
-.item {
-  margin: 0;
-  padding: 0;
-  padding-bottom: 5px;
-  font-size: 14px;
 }
