--- a/src/layouts/signup-layout/signup-layout.module.css
+++ b/src/layouts/signup-layout/signup-layout.module.css
@@ -7,7 +7,6 @@
 
 .layout {
   composes: common;
-  justify-content: self-start;
   width: 100vw;
   height: 100vh;
 }
@@ -36,39 +35,10 @@
 
 .boxes {
   width: 100%;
-  margin: 0;
-  margin-bottom: 10px;
+  margin: 0 0 10px;
   padding: 0;
   box-sizing: border-box;
 }
-
-/* .box {
-  display: flex;
-  flex-direction: column;
-  min-height: 60px;
-  width: 100%;
-  margin: 0;
-  margin-bottom: 10px;
-  padding: 0;
-  box-sizing: border-box;
-} */
-
-/* .error {
-  padding: 5px 0;
-  font-size: 12px;
-  color: var(--error-color);
-  height: auto;
-}
-
-.input {
-  height: 40px;
-  width: 100%;
-  margin: 0;
-  padding: 0 10px;
-  box-sizing: border-box;
-  border-radius: 6px;
-  border: 1px solid var(--border-color);
-} */
 
 .button {
   min-height: 40px;
