--- a/src/components/error-boundary/error-boundary.module.css
+++ b/src/components/error-boundary/error-boundary.module.css
@@ -1,8 +1,12 @@
-.error-boundary {
+.block {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.error-boundary {
+  composes: block;
   max-width: 100vw;
   max-height: calc(100vh - 42px);
   height: 100%;
@@ -17,13 +21,6 @@
   color: darkblue;
 }
 
-.block {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .button {
   border-radius: 4px;
   border: 0;
@@ -32,8 +29,5 @@
 }
 
 .link {
-  border-radius: 4px;
-  border: 0;
-  margin: 5px;
-  padding: 5px 10px;
+  composes: button;
 }
