--- a/src/components/input-field/input-field.module.css
+++ b/src/components/input-field/input-field.module.css
@@ -3,8 +3,7 @@
   flex-direction: column;
   min-height: 60px;
   width: 100%;
-  margin: 0;
-  margin-bottom: 10px;
+  margin: 0 0 10px;
   padding: 0;
   box-sizing: border-box;
 }
