--- a/src/layouts/signin-layout/signin-layout.module.css
+++ b/src/layouts/signin-layout/signin-layout.module.css
@@ -7,7 +7,7 @@
 
 .layout {
   composes: common;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
@@ -16,7 +16,8 @@
   min-width: 300px;
   max-width: 320px;
   width: 100%;
-  min-height: 480px;
+  height: 100%;
+  max-height: 480px;
   box-sizing: border-box;
   padding: 30px;
   border-radius: 10px;
