--- a/src/layouts/oauth-layout/oauth-layout.module.css
+++ b/src/layouts/oauth-layout/oauth-layout.module.css
@@ -8,9 +8,8 @@
 .layout {
   composes: common;
   max-width: 100vw;
-  max-height: 100vh;
+  height: 100vh;
   width: 100%;
-  height: 100%;
 }
 
 .container {
