--- a/src/layouts/signin-layout/signin-layout.module.css
+++ b/src/layouts/signin-layout/signin-layout.module.css
@@ -25,7 +25,13 @@
 }
 
 .title {
-  margin-bottom: 40px;
+  margin-bottom: 10px;
+}
+
+.description {
+  margin-bottom: 20px;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 .form {
@@ -39,13 +45,4 @@
   margin: 0 0 10px;
   padding: 0;
   box-sizing: border-box;
-}
-
-
-.button {
-  width: 100%;
-  padding: 0;
-  min-height: 40px;
-  border-radius: 6px;
-
 }
