--- a/src/components/input-field/input-field.module.css
+++ b/src/components/input-field/input-field.module.css
@@ -1,9 +1,9 @@
 .inputfield {
   display: flex;
   flex-direction: column;
-  min-height: 60px;
+  min-height: 30px;
   width: 100%;
-  margin: 0 0 10px;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
@@ -12,11 +12,13 @@
   padding: 5px 0;
   font-size: 12px;
   color: var(--error-color);
+  margin-top: 5px;
   height: auto;
 }
 
 .input {
-  height: 40px;
+  /* height: 40px; */
+  height: 30px;
   width: 100%;
   margin: 0;
   padding: 0 10px;
