--- a/src/components/error-boundary/error-boundary.module.css
+++ b/src/components/error-boundary/error-boundary.module.css
@@ -5,12 +5,11 @@
   align-items: center;
 }
 
-.error-boundary {
+.boundary {
   composes: block;
-  max-width: 100vw;
-  max-height: calc(100vh - 42px);
-  height: 100%;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
+  background-color: #cccccc;
 }
 
 .title {
